package main.java.results;

public interface UseCaseResult {

}
