package main.java.usecaseparameters;

public interface UseCaseParameter {
}
